--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Setup C++ environment
+      uses: kurocha/setup-cpp@v1      
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
