--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -29,7 +29,7 @@ jobs:
         git checkout
         .\bootstrap-vcpkg.bat
         .\vcpkg.exe install SQLiteCpp:x64-windows
-        .\vcpkg.exe install sqlite_orm:x64-windows
+        .\vcpkg.exe install sqlite-orm:x64-windows
     - name: Build
       run: msbuild -/t:Build /p:Configuration=Release Tosr.sln
     - name: Test
