--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -181,6 +181,12 @@
     <ClCompile Include="SQLiteOrmWrapper.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Tosr.db3">
+      <DeploymentContent>true</DeploymentContent>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
