--- a/Tosr/Tosr.csproj
+++ b/Tosr/Tosr.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="for %25%25f in (&quot;Engine.dll&quot;, &quot;sqlite3.dll&quot;, &quot;Tosr.db3&quot;) do xcopy $(SolutionDir)Tosr\bin\$(Configuration)\netcoreapp3.1\%25%25f $(SolutionDir)TosrIntegration.Test\bin\$(Configuration)\netcoreapp3.1\ /d /y" />
+    <Exec Command="for %25%25f in (&quot;Engine.dll&quot;, &quot;sqlite3.dll&quot;, &quot;Tosr.db3&quot;) do xcopy $(ProjectDir)bin\$(Configuration)\netcoreapp3.1\%25%25f $(ProjectDir)..\TosrIntegration.Test\bin\$(Configuration)\netcoreapp3.1\ /d /y" />
   </Target>
 
 </Project>
