Fixed bug in yml

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Build
       run: msbuild /t:Build /p:Configuration=Release -m Tosr.sln
     - name: Run c# Test
-      run: dotnet test --no-restore --verbosity normal .\TosrGui.Test\TosrGui.Test.csproj
+      run: dotnet test --no-restore --configuration Release --verbosity normal .\TosrGui.Test\TosrGui.Test.csproj
     - name: Run c++ Test
       run: .\x64\Release\EngineTest.exe
     - uses: actions/upload-artifact@v2
