--- a/Tosr/Tosr.csproj
+++ b/Tosr/Tosr.csproj
@@ -26,7 +26,7 @@
       <TosrBuildDirectory>$(ProjectDir)bin\$(Configuration)\netcoreapp3.1</TosrBuildDirectory>
       <TosrIntegrationTestBuildDirectory>$(ProjectDir)..\TosrIntegration.Test\bin\$(Configuration)\netcoreapp3.1</TosrIntegrationTestBuildDirectory>
     </PropertyGroup>
-    <Copy SourceFiles="$(TosrBuildDirectory)\Engine.dll;$(TosrBuildDirectory)\sqlite3.dll;$(TosrBuildDirectory)\Tosr.db3" DestinationFolder="$(TosrIntegrationTestBuildDirectory)"/>
+    <Copy SourceFiles="$(TosrBuildDirectory)\Engine.dll;$(TosrBuildDirectory)\sqlite3.dll" DestinationFolder="$(TosrIntegrationTestBuildDirectory)"/>
   </Target>
 
 </Project>
