--- a/TosrGui.Test/TosrGui.Test.csproj
+++ b/TosrGui.Test/TosrGui.Test.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\Solver\dds.dll" Link="dds.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -23,12 +29,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Solver\Solver.csproj" />
     <ProjectReference Include="..\Tosr\Tosr.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="dds.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
