Implemented logging (issue 25)

--- a/TosrIntegration.Test/TosrIntegration.Test.csproj
+++ b/TosrIntegration.Test/TosrIntegration.Test.csproj
@@ -33,4 +33,10 @@
     <ProjectReference Include="..\Tosr\Tosr.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
