--- a/Tosr/nlog.config
+++ b/Tosr/nlog.config
@@ -3,12 +3,19 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
   <targets>
-    <target name="logfile" xsi:type="File" fileName="tosr.txt" />
+    <target 
+      name="logfile" 
+      xsi:type="File" 
+      fileName="${basedir}/logs/tosr.log" 
+      archiveFileName="${basedir}/logs/archive.{#}.log"
+      archiveEvery="Day"
+      archiveNumbering="Rolling"
+      maxArchiveFiles="7"/>
     <target name="logconsole" xsi:type="Console" />
   </targets>
 
   <rules>
     <logger name="*" minlevel="Info" writeTo="logconsole" />
-    <logger name="*" minlevel="Debug" writeTo="logfile" />
+    <logger name="*" minlevel="Info" writeTo="logfile" />
   </rules>
 </nlog>
