--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -30,7 +30,8 @@ jobs:
       with:
         setupOnly: true
     # Now that vcpkg is installed, it is being used to run with desired arguments.
-    - run: |
+    - name: Install SQLiteCpp using vcpg      
+      run: |
         $VCPKG_ROOT/vcpkg install SQLiteCpp:x64-windows
         # $VCPKG_ROOT/vcpkg integrate install SQLiteCpp:x64-windows
       shell: bash      
