--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+          submodules: true      
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.0.0       
     - name: Setup .NET Core
