--- a/Tosr/Tosr.csproj
+++ b/Tosr/Tosr.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.7.5" />
+    <PackageReference Include="ObjectCloner" Version="2.2.2" />
   </ItemGroup>
 
   <ItemGroup>
