Implement loading and saving of PBN files https://github.com/YkeSmit1/TOSR/issues/42

--- a/TosrGui.Test/TosrGui.Test.csproj
+++ b/TosrGui.Test/TosrGui.Test.csproj
@@ -28,4 +28,13 @@
     <ProjectReference Include="..\Tosr\Tosr.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="CursusSlotdrive.pbn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Example.pbn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
