--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -21,9 +21,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
-    - uses: montudor/action-zip@v0.1.1
+    - uses: TonyBogdanov/zip@1.0
       with:
-        args: unzip -qq .\solver\deal319win.zip
+        args: unzip -qq .\solver\deal319win.zip -d .\solver
     - name: Install dependencies
       run: dotnet restore
     - name: NuGet Restore
