--- a/Tosr/Tosr.csproj
+++ b/Tosr/Tosr.csproj
@@ -51,4 +51,12 @@
     <Copy SourceFiles="$(TosrBuildDirectory)\Engine.dll;$(TosrBuildDirectory)\sqlite3.dll" DestinationFolder="$(TosrIntegrationTestBuildDirectory)" />
   </Target>
 
+  <Target Name="UnzipArchive" BeforeTargets="Build">
+    <Unzip
+        SourceFiles=".\..\deal319win.zip"
+        DestinationFolder="$(OutputPath)"
+        OverwriteReadOnlyFiles="true"
+        />
+  </Target>
+
 </Project>
