--- a/Tosr/Tosr.csproj
+++ b/Tosr/Tosr.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <RunAnalyzersDuringBuild>true</RunAnalyzersDuringBuild>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -24,6 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.7.6" />
     <PackageReference Include="ObjectCloner" Version="2.2.2" />
@@ -40,7 +43,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Images.resx</DependentUpon>
     </Compile>
-    <Compile Update="UserConfig.Designer.cs">
+    <Compile Update="Properties\UserConfig.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
       <DependentUpon>UserConfig.settings</DependentUpon>
@@ -58,7 +61,7 @@
     <None Update="nlog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="UserConfig.settings">
+    <None Update="Properties\UserConfig.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>UserConfig.Designer.cs</LastGenOutput>
     </None>
