--- a/TosrIntegration.Test/nlog.config
+++ b/TosrIntegration.Test/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
   <targets>
-    <target name="logfile" xsi:type="File" fileName="tosr.txt" />
+    <target name="logfile" xsi:type="File" fileName="tosr.log" />
     <target name="logconsole" xsi:type="Console" />
   </targets>
 
