Added setting for number of hands to bid

--- a/Tosr/Properties/Settings.settings
+++ b/Tosr/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="boardNumber" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="numberOfHandsToBid" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
