--- a/Tosr/Properties/Settings.settings
+++ b/Tosr/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="numberOfHandsToBid" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="systemParametersPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">SystemParameters.json</Value>
+    </Setting>
+    <Setting Name="optimizationParametersPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">OptimizationParameters.json</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
