--- a/TosrIntegration.Test/TosrIntegration.Test.csproj
+++ b/TosrIntegration.Test/TosrIntegration.Test.csproj
@@ -39,6 +39,12 @@
     <None Update="nlog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="SystemParameters1.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="SystemParameters2.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
