Bidding parameters in file (#60)
* Added system parameters and optimization parameters

* Added menu items to load parameter files

* Added parameter files as embedded resources

* Added descriptive names for file dialogs

* Small changes

* Implementing requested changes in review...

* Implementing changes requested in review...

* Implementing changes requested in review...

* Added unit and integration tests for parameters

* All tests pass now

* Commit reverted

* Small changes requested in review

* Removed bin and obj folders

* Last changes

Co-authored-by: eddovdboom <eddo.vandenboom@be-eager.nl>

--- a/Tosr/Properties/Settings.settings
+++ b/Tosr/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="numberOfHandsToBid" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="systemParametersPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="optimizationParametersPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
