--- a/Tosr/Tosr.csproj
+++ b/Tosr/Tosr.csproj
@@ -16,6 +16,12 @@
     <Content Include="..\FasesWithOffset.json" Link="FasesWithOffset.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="..\OptimizationParameters.json" Link="OptimizationParameters.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\SystemParameters.json" Link="SystemParameters.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
