- Implemented distinction between poor and incorrect outcome - Implemented the ability to filter on outcome - Added single dummy scores to the description issue #45

--- a/Tosr/Properties/Settings.settings
+++ b/Tosr/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="optimizationParametersPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="filter" Type="System.String" Scope="User">
+      <Value Profile="(Default)">All</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
