Write specific information about the bidding to a separate logfile #45

--- a/Tosr/nlog.config
+++ b/Tosr/nlog.config
@@ -11,11 +11,17 @@
       archiveEvery="Day"
       archiveNumbering="Rolling"
       maxArchiveFiles="7"/>
+    <target
+      name="biddingfile"
+      xsi:type="File"
+      fileName="${basedir}/logs/bidding_information.log"
+      layout="${message}"/>
     <target name="logconsole" xsi:type="Console" />
   </targets>
 
   <rules>
     <logger name="*" minlevel="Info" writeTo="logconsole" />
-    <logger name="*" minlevel="Info" writeTo="logfile" />
+    <logger name="Tosr.*" minlevel="Info" writeTo="logfile" />
+    <logger name="bidding" minlevel="Info" writeTo="biddingfile" />
   </rules>
 </nlog>
