- Implemented show alternate suits in hand - Fixed crash when bidding in interactive before Shuffle - Made biddingbox a bit prettier

--- a/Tosr/Properties/Settings.settings
+++ b/Tosr/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="filter" Type="System.String" Scope="User">
       <Value Profile="(Default)">All</Value>
     </Setting>
+    <Setting Name="alternateSuits" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
