Split off projects BiddingLogic and Common.Controls

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,12 @@
 /.vs
 /packages
-/x64
+x64
+bin
+obj
 /TestResults
-/Tosr/obj
-/Tosr/bin
-/Engine/x64
-/EngineTest/x64
-/TosrGui.Test/obj
-/TosrGui.Test/bin
 /Engine/*.user
-/TosrIntegration.Test/bin
-/TosrIntegration.Test/obj
-/Solver/bin
-/Solver/obj
 /Test
-/Common/obj
-/Common/bin
 launchSettings.json
-/Common.Test/bin
-/Common.Test/obj
 /log.txt
 /Tarzan.db3
+*.user
