--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)\Tosr\Bin\$(Configuration)\net5.0-windows\</OutDir>
+    <OutDir>$(SolutionDir)\Wpf.Tosr\Bin\$(Configuration)\net5.0-windows\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
@@ -82,7 +82,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)\Tosr\Bin\$(Configuration)\net5.0-windows\</OutDir>
+    <OutDir>$(SolutionDir)\Wpf.Tosr\Bin\$(Configuration)\net5.0-windows\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
