- Big refactoring. Removed BidPerFases and zoom to biddingstate - removed project Tosr for windows forms from solution

--- a/Common.Test/Common.Test.csproj
+++ b/Common.Test/Common.Test.csproj
@@ -9,8 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BiddingLogic\BiddingLogic.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
-    <ProjectReference Include="..\Tosr\Tosr.csproj" />
   </ItemGroup>
 
 </Project>
