--- a/TosrGui.Test/TosrGui.Test.csproj
+++ b/TosrGui.Test/TosrGui.Test.csproj
@@ -23,9 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BiddingLogic\BiddingLogic.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Solver\Solver.csproj" />
-    <ProjectReference Include="..\Tosr\Tosr.csproj" />
   </ItemGroup>
 
   <ItemGroup>
