Cleanup after last refactoring

--- a/TosrIntegration.Test/TosrIntegration.Test.csproj
+++ b/TosrIntegration.Test/TosrIntegration.Test.csproj
@@ -37,7 +37,7 @@
 
   <ItemGroup>
     <None Update="nlog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
