Moved files from common to Common.Tosr

--- a/BiddingLogic/BiddingLogic.csproj
+++ b/BiddingLogic/BiddingLogic.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common.Tosr\Common.Tosr.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Solver\Solver.csproj" />
   </ItemGroup>
